--- a/src/Makefile
+++ b/src/Makefile
@@ -1,26 +1,15 @@
 JFLAGS = -g
 JC = javac
-JVM= java 
-FILE=
-
-
 .SUFFIXES: .java .class
-
-
 .java.class:
-        $(JC) $(JFLAGS) $*.java
+    $(JC) $(JFLAGS) $*.java
 
 CLASSES = \
-        unitTest.java
-        
-MAIN = unitTest
+          unitTest.java
 
 default: classes
 
 classes: $(CLASSES:.java=.class)
 
-run: $(MAIN).class
-	   $(JVM) $(MAIN)
-     
-
-clean: $(RM) *.class
+clean:
+    rm -f *.class
