--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,7 @@
 JFLAGS = -g
 JC = javac
 .SUFFIXES: .java .class
-.java.class:
-    $(JC) $(JFLAGS) $*.java
+.java.class:$(JC)  $(JFLAGS) $ *.java
 
 CLASSES = \
           unitTest.java
@@ -11,5 +10,4 @@ default: classes
 
 classes: $(CLASSES:.java=.class)
 
-clean:
-    rm -f *.class
+clean:rm -f *.class
