--- a/src/Makefile
+++ b/src/Makefile
@@ -1,13 +1,16 @@
-JFLAGS = -g
+GS = -g
 JC = javac
 .SUFFIXES: .java .class
-.java.class:$(JC)  $(JFLAGS) $ *.java
+	.java.class:
+	        $(JC) $(JFLAGS) $*.java
 
 CLASSES = \
-          unitTest.java
+	  unitTest.java \
+
 
 default: classes
 
 classes: $(CLASSES:.java=.class)
 
-clean:rm -f *.class
+clean:
+	        $(RM) *.class
