--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,8 @@ JC = javac
 default:unitTest.class
 
 unitTest.class:unitTest.java
+  $(JC) $(GS) unitTest.java
 
 
-clean:rm -f *.class
+clean:
+  rm -f *.class
