--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,13 @@
-GS = -g
+JFLAGS = -g
 JC = javac
 
 default:unitTest.class
 
 unitTest.class:unitTest.java
-  $(JC) $(GS) unitTest.java
+	$(JC) $(JFLAGS) unitTest.java
+xmlPaser.class:xmlPaser.java
+	$(JC) $(JFLAGS) xmlPaser.java
 
 
 clean:
-  rm -f *.class
+	rm -f *.class
